<resources>
    <string name="GOOGLE_API_KEY">AIzaSyA9rTnxqBiap6yioOqcGREcyrcZno2ShGU</string>
    <string name="app_name">SupperManNH</string>
    <string name="error_missing_network">mất kết nối mạng</string>
    <string name="error">kết nối thất bại</string>


    <string name="layout1a">Chào mừng bạn đến với NASA</string>
    <string name="layout1b">Nhà hàng khách sạn tuyệt vời, giúp bạn tận hưởng nhiều món ăn ngon</string>
    <string name="layout2a">Thông tin chuẩn xác</string>
    <string name="layout2b">Đọc đánh giá từ hàng triệu nhà hàng,khách sạn từ những khách hàng như bạn</string>
    <string name="layout3a">An tâm đặt bàn</string>
    <string name="layout3b">Đặt bàn nhà hàng, khách sạn. Chúng tôi đã kiểm tra hơn 200 trang web để tìm cho bạn giá nhà hàng tốt nhất</string>
    <string name="layout4a">Tha hồ ăn uống</string>
    <string name="layout4b">Khi đăng ăn ở nhà hàng, hãy tận hưởng những món ăn ngon chỉ có tại nhà hàng</string>
    <string name="text_phone_hint">Nhập tài khoản</string>
    <string name="text_hint_password">Nhập mật khẩu</string>
    <string name="text_hint_coment">Nhập bình luận</string>
    <string name="text_login">Đăng nhập</string>
    <string name="error_null">Yêu cầu nhập dữ liệu</string>
    <string name="error_ky_tu">Không được nhập ký tự đặc biệt</string>
    <string name="error_login">Tài khoản mật khẩu không đúng</string>
    <string name="hot_line">0961143328</string>
    <string name="home_dialog_button_text_cancel">Hủy bỏ</string>
    <string name="register_button_text_confirm">Xác nhận</string>
    <string name="update_info_label_name_display">Tên hiển thị*:</string>
    <string name="update_info_label_email">Tài khoản*:</string>
    <string name="comnent">Viết bình luận*:</string>
    <string name="update_info_hint_password">Mật khẩu</string>
    <string name="update_info_label_phone_display">Số điện thoại*:</string>
    <string name="update_info_hint_phone_number">Số điện thoại</string>
    <string name="update_info_hint_username">Tài khoản</string>
    <string name="succer_account">Cập nhật thông tin thành công</string>
    <string name="text_password">Mật khẩu*:</string>
    <string name="update_change_password">Mật khẩu mới*:</string>
    <string name="change_password">Nhập mật khẩu mới</string>
    <string name="update_password">Nhập lại mật khẩu*:</string>
    <string name="update_info_update_password">Nhập lại mật khẩu</string>
    <string name="button_password">Xác nhận</string>
    <string name="button_confirm">Xác nhận</string>
    <string name="wrong_password">Mật khẩu không đúng</string>
    <string name="password_not">Mật khẩu không trùng</string>
    <string name="password_succer">Đổi mật khẩu thành công</string>
    <string name="error_ratiing">Bạn chưa đánh giá cho nhà hàng</string>
    <string name="text_ratting">Đánh giá nhà hàng thành công</string>


    <string name="text_hotpot">Lẩu nướng</string>
    <string name="text_dish">Đồ ăn</string>
    <string name="text_drinks">Nước uống</string>
    <string name="text_home_houst">Hôm nay bạn muốn ăn ở đâu</string>
    <string name="error_houst">Đã xem hết các nhà hàng</string>
    <string name="ratting_count">Đánh giá :</string>
    <string name="text_account">Món ăn</string>
    <string name="text_comment">Bình luận</string>
    <string name="text_marker">Thông tin</string>
    <string name="amount_of_people">Số lượng :</string>
    <string name="error_online">Nhà hàng đã hết bàn</string>
    <string name="error_maintenance">Nhà hàng đang bảo trì</string>
    <string name="cancel_trip_toolbar_title">Hủy đặt</string>
    <string name="cancel_trip_radio_text_reason_1">Việc bận đột suất</string>
    <string name="cancel_trip_radio_text_reason_2">Không có nhu cầu đặt hàng</string>
    <string name="cancel_trip_radio_text_reason_3">Đặt nhầm thời gian</string>
    <string name="cancel_trip_radio_text_reason_other">Lý do khác</string>
    <string name="cancel_trip_hint_other_reason">Nhập lý do</string>
    <string name="cancel_trip_button_text_cancel_trip">Hủy đặt</string>
    <string name="messing_success">Đặt bàn thành công</string>
    <string name="error_online_cancel">Bạn đã đặt bàn rồi</string>
    <string name="text_registration">Đăng ký</string>
    <string name="text_name_user_registration">Tài khoản</string>
    <string name="text_hint_name_user_registration">Nhập tài khoản</string>
    <string name="update_phone_registration">Số điện thoại</string>
    <string name="phone_registration">Nhập số điện thoại</string>
    <string name="password_registration">Mật khẩu</string>
    <string name="update_password_registration">Nhập mật khẩu</string>
    <string name="password_info_registration">Nhập lại mật khẩu</string>
    <string name="update_info_password_registration">Nhập lại mật khẩu</string>
    <string name="error_phone">Đây không phải số điện thoại</string>
    <string name="error_coincide">Tài khoản hoặc số điện thoại đã tồn tại</string>
    <string name="success_registraton">Đăng ký thành công</string>
    <string name="error_no_coincide">Mật khẩu không trùng nhau</string>
    <string name="error_error">Lỗi đăng nhập</string>
    <string name="error_android">Tài khoản đã đang nhập ở thiết bị khác</string>
</resources>
