<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fakeStatusBar">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/activity_update_info_app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_48"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/activity_update_info_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <ImageView
                    android:id="@+id/activity_update_info_iv_back"
                    android:layout_width="@dimen/space_24"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center_vertical"
                    android:src="@drawable/ic_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Đổi mật khẩu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_update_info_iv_avatar_password"
            android:layout_width="@dimen/space_120"
            android:layout_height="@dimen/space_120"
            android:layout_marginTop="@dimen/space_16"
            app:civ_border_color="@color/update_info_color_border_avatar"
            app:civ_border_width="@dimen/space_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_update_info_app_bar"
            tools:src="@tools:sample/avatars[1]" />

        <TextView
            android:id="@+id/activity_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:text="@string/text_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_update_info_iv_avatar_password" />

        <EditText
            android:id="@+id/activity_ed_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:autofillHints="false"
            android:background="@drawable/bg_edit_text_enable_update_info"
            android:hint="@string/text_hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/space_10"
            android:singleLine="true"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_password" />

        <TextView
            android:id="@+id/activity_change_passowrod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:text="@string/update_change_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_ed_password" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/activity_ed_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:autofillHints="false"
            android:background="@drawable/bg_edit_text_enable_update_info"
            android:hint="@string/change_password"
            android:maxLength="20"
            android:padding="@dimen/space_10"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_change_passowrod" />

        <TextView
            android:id="@+id/activity_update_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:text="@string/update_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_ed_change_password" />

        <EditText
            android:id="@+id/activity_update_ed_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:autofillHints="false"
            android:background="@drawable/bg_edit_text_enable_update_info"
            android:hint="@string/update_info_update_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="@dimen/space_10"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_update_password" />
        <Button
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:id="@+id/btn_confirm_password"
            android:text="@string/button_confirm"
            android:background="@drawable/button_add"
            app:layout_constraintTop_toBottomOf="@+id/activity_update_ed_password"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:layout_marginTop="@dimen/space_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_44" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>